A lot bug fixes